# subs-poc

./: Dockerfile  Makefile  docker-compose.yaml  entrypoint.sh  pyproject.toml
app/: main.py
app/graphql/: schema.py
app/graphql/types/: Message.graphql  Mutation.graphql  Query.graphql  Subscription.graphql
app/resolvers/: message.py
app/utils/: broadcaster.py
