[tool.poetry]
name = "subs-poc"
version = "0.1.0"
description = ""
authors = ["Deo <deo.guillermo@venn.bio>"]
readme = "README.md"
packages = [{include = "subs_poc"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.20.0"
ariadne = "0.16.1"
starlette = "0.20.4"
broadcaster = "0.2.0"
websockets = "^10.4"
asyncio-redis = "^0.16.0"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
